dynamically_typed_tests/invalid/expression/boolOpTypeErr.wacc
# expresission type mismatch int->bool

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  b = 1 || 1
end
